--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vue": "^3.2.37"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.72.0",
+        "sass-loader": "^12.6.0",
+        "vue": "^3.2.37",
+        "vue-loader": "^16.8.3"
     }
 }
